[gd_scene load_steps=2 format=2]

[ext_resource path="res://NetworkSetup.gd" type="Script" id=1]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MultiplayerConfigure" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CreateGame" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 6.729
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 460.0
margin_right = 190.84
margin_bottom = 510.0
text = "Create Game"

[node name="JoinGame" type="Button" parent="MultiplayerConfigure"]
margin_left = 260.0
margin_top = 600.0
margin_right = 460.0
margin_bottom = 650.0
text = "Join Game"

[node name="ServerIPAddress" type="LineEdit" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 340.0
margin_right = 540.0
margin_bottom = 390.0
placeholder_text = "Enter IP Address"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIPAddress" type="Label" parent="CanvasLayer"]
margin_left = 160.0
margin_top = 720.0
margin_right = 560.0
margin_bottom = 770.0

[connection signal="pressed" from="MultiplayerConfigure/CreateGame" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/JoinGame" to="." method="_on_JoinGame_pressed"]
